src/static/style.css
/* printing */
@media print {
    body {
        visibility: hidden;
    }
    .page-container {
        visibility: visible;
        position: absolute;
        left: 0;
        top: 0;
        margin: 0;
        padding: 0;
    }
}

/* base design setup */
body {
    font-family: "Oldenburg";
    margin: 0;
    padding: 0;
    background-color: #b8bcf7;
}

.sheet-container {
    padding: 10px;
    overflow: auto;
    background-color: rgb(136, 114, 100);
    border-radius: 10px;
}
.page-container {
    width: 210mm;
    height: 297mm;
    font-size: x-small;
    font-weight: bold;
    margin: 0 auto;
    display: flex;
    flex-direction: column;
    background-color: rgb(173, 160, 151);
}


/* general elements */
img {
    width: 100%;
    vertical-align: middle;
}
h1 {
    text-align: center;
    padding: 0px;
    margin: 2px;
    font-family: Metamorphous;
}
h4 {
    text-align: center;
    border-bottom: 2px solid #000000;
    padding: 0px;
    margin: 2px;
    font-family: Metamorphous;
    font-size: small;
}
label {
    font-weight: bold;
}
/* table styling */
table {
    width: 100%;
    border-collapse: collapse;
    border-style: hidden;
}
table td,
table th {
    border: 2px solid #000;
    text-align: center;
    
}
table th {
    border-bottom: 2px solid #000;
}
table td:last-child,
table th:last-child {
    border-right: none;
}

/* general classes */
.part-container {
    border-bottom: 5px solid #0a1033;
    width: 100%;
}
.part-container > div {
    padding: 5px;
}
.part-container:last-child {
    border-bottom: none;
}
/* flex-section is used when a part has more than one element spanning the width*/
.flex-section {
    width: 100%;
    display: flex;
    justify-content: space-evenly;
}
.flex-section > div {
    padding: 5px;
    border-right: 5px solid #0a1033;
}
.flex-section > div:last-child {
    border-right: none;
}
/* column is used when an element in a flex-section has more than one element vertically*/
.column {
    display: flex;
    flex-direction: column;
    align-items: center;
}
.column > div {
    width: 100%;
    border-bottom: 5px solid #0a1033;
}
.column > div:last-child {
    border-bottom: none;
}

/* inline used to put label and input on the same line in a table */
.inline {
    display: inline-flex;
    align-items: center;
}
.inline label {
    margin-right: auto;
}

/* input and textarea styling */
.input-text,
.input-number,
.textarea {
    background: none;
    border: none;
    width: 100%;
    text-align: center;
}
.input-number, .number {
    font-family: "Oldenburg";
    font-size: small;
}
.input-text, textarea {
    font-family: "Shantell Sans";
}
#create-new-character {
    color: #0d2707;
}

/* !! description & trappings page */
/* description and logo */
.description-container {
    width: 80%;
    text-align: center;
    border-right: 3px solid #000;
}
.description-table {
    height: 100%;
}
.description-table td {
    width: 20%;
    padding: 5px;
}
.description-table td > div {
    text-align: left;
    width: 100%;
}

.description-table label {
    font-size: small;
    font-weight: bold;
    text-wrap: nowrap;
}
.logo-container {
    width: 20%;
}

/* fluff design */
.fluff-container {
    justify-content: center;
    padding: 5px;
    width: 30%;
    text-align: left;
}
.fluff-container ul {
    list-style-type: none;
    padding: 0;
    margin: 0;
}
.fluff-container li {
    padding: 5px;
    text-align: left;
    border-bottom: 2px solid #000;
}

.fluff-container li:last-child {
    border-bottom: none;
}
.fluff-container:last-child {
    width: 10%;
}
.fluff-container.column div{
    border-bottom: 2px solid #000;
    margin: auto;
    font-weight: bold;
    font-size: small;
}
.fluff-container.column div:last-child{
    border-bottom: none;
}


/* !! width control */

.width-10 {
    width: 10%;
}
.width-15 {
    width: 15%;
}
.width-20 {
    width: 20%;
}
.width-30 {
    width: 30%;
}
.width-35 {
    width: 35%;
}
.width-40 {
    width: 40%;
}
.width-50 {
    width: 50%;
}
.width-55 {
    width: 55%;
}
.width-60 {
    width: 60%;
}
.width-65 {
    width: 65%;
}
.width-70 {
    width: 70%;
}
.width-a {
    width: auto;
}
.width-90 {
    width: 90%;
}
/* ! height control */
.height-12 {
    height: 12%;
}
.height-84 {
    height: 84%;
}
.height-100 {
    height: 100%;
}

/* ! padding control */
.padding {
    padding: 5px;
}

/* ! battle page design for separation of the elements */
.two-block {
    width: 50%;
    text-align: center;
    height: 100%;
}
.three-block {
    width: 36%;
}
.three-block:nth-child(2) {
    width: 26%;
}
.three-block:nth-child(1) {
    width: 40%;
}

.align-center {
    text-align: center;
}


input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

